changing parameters for log linear regression

--- a/CreditRisk.ipynb
+++ b/CreditRisk.ipynb
@@ -775,115 +775,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "8a7f0f43",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['loan_amnt',\n",
-       " 'int_rate',\n",
-       " 'installment',\n",
-       " 'annual_inc',\n",
-       " 'dti',\n",
-       " 'delinq_2yrs',\n",
-       " 'inq_last_6mths',\n",
-       " 'open_acc',\n",
-       " 'pub_rec',\n",
-       " 'revol_bal',\n",
-       " 'total_acc',\n",
-       " 'out_prncp',\n",
-       " 'out_prncp_inv',\n",
-       " 'total_pymnt',\n",
-       " 'total_pymnt_inv',\n",
-       " 'total_rec_prncp',\n",
-       " 'total_rec_int',\n",
-       " 'total_rec_late_fee',\n",
-       " 'recoveries',\n",
-       " 'collection_recovery_fee',\n",
-       " 'last_pymnt_amnt',\n",
-       " 'collections_12_mths_ex_med',\n",
-       " 'policy_code',\n",
-       " 'acc_now_delinq',\n",
-       " 'tot_coll_amt',\n",
-       " 'tot_cur_bal',\n",
-       " 'open_acc_6m',\n",
-       " 'open_act_il',\n",
-       " 'open_il_12m',\n",
-       " 'open_il_24m',\n",
-       " 'mths_since_rcnt_il',\n",
-       " 'total_bal_il',\n",
-       " 'il_util',\n",
-       " 'open_rv_12m',\n",
-       " 'open_rv_24m',\n",
-       " 'max_bal_bc',\n",
-       " 'all_util',\n",
-       " 'total_rev_hi_lim',\n",
-       " 'inq_fi',\n",
-       " 'total_cu_tl',\n",
-       " 'inq_last_12m',\n",
-       " 'acc_open_past_24mths',\n",
-       " 'avg_cur_bal',\n",
-       " 'bc_open_to_buy',\n",
-       " 'bc_util',\n",
-       " 'chargeoff_within_12_mths',\n",
-       " 'delinq_amnt',\n",
-       " 'mo_sin_old_il_acct',\n",
-       " 'mo_sin_old_rev_tl_op',\n",
-       " 'mo_sin_rcnt_rev_tl_op',\n",
-       " 'mo_sin_rcnt_tl',\n",
-       " 'mort_acc',\n",
-       " 'mths_since_recent_bc',\n",
-       " 'mths_since_recent_inq',\n",
-       " 'num_accts_ever_120_pd',\n",
-       " 'num_actv_bc_tl',\n",
-       " 'num_actv_rev_tl',\n",
-       " 'num_bc_sats',\n",
-       " 'num_bc_tl',\n",
-       " 'num_il_tl',\n",
-       " 'num_op_rev_tl',\n",
-       " 'num_rev_accts',\n",
-       " 'num_rev_tl_bal_gt_0',\n",
-       " 'num_sats',\n",
-       " 'num_tl_120dpd_2m',\n",
-       " 'num_tl_30dpd',\n",
-       " 'num_tl_90g_dpd_24m',\n",
-       " 'num_tl_op_past_12m',\n",
-       " 'pct_tl_nvr_dlq',\n",
-       " 'percent_bc_gt_75',\n",
-       " 'pub_rec_bankruptcies',\n",
-       " 'tax_liens',\n",
-       " 'tot_hi_cred_lim',\n",
-       " 'total_bal_ex_mort',\n",
-       " 'total_bc_limit',\n",
-       " 'total_il_high_credit_limit',\n",
-       " 'home_ownership_ANY',\n",
-       " 'home_ownership_MORTGAGE',\n",
-       " 'home_ownership_OWN',\n",
-       " 'home_ownership_RENT',\n",
-       " 'verification_status_Not Verified',\n",
-       " 'verification_status_Source Verified',\n",
-       " 'verification_status_Verified',\n",
-       " 'pymnt_plan_n',\n",
-       " 'initial_list_status_f',\n",
-       " 'initial_list_status_w',\n",
-       " 'application_type_Individual',\n",
-       " 'application_type_Joint App',\n",
-       " 'hardship_flag_N',\n",
-       " 'hardship_flag_Y',\n",
-       " 'debt_settlement_flag_N',\n",
-       " 'debt_settlement_flag_Y']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "display(list(X_dummies.columns.values))"
+    "#display(list(X_dummies.columns.values))"
    ]
   },
   {
@@ -2016,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "b8c137ff",
    "metadata": {
     "scrolled": true
@@ -2026,30 +1925,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Data Score: 0.65311986863711\n",
-      "Testing Data Score: 0.5076563164610803\n",
+      "Training Data Score: 0.7054187192118226\n",
+      "Testing Data Score: 0.5642279880901744\n",
       "Model:Logistic Regression\n",
-      "score:0.5076563164610803\n",
+      "score:0.5642279880901744\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dasa\\.conda\\envs\\PythonAdv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:765: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
      ]
     }
    ],
    "source": [
-    "reg = LogisticRegression().fit(X_dummies, y_label)\n",
+    "reg = LogisticRegression(max_iter=200000).fit(X_dummies, y_label)\n",
     "\n",
     "#reg.score(X1_dummies,y1_label)\n",
     "print(f\"Training Data Score: {reg.score(X_dummies, y_label)}\")\n",
@@ -2061,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "52060700",
    "metadata": {},
    "outputs": [],
@@ -2071,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "50010107",
    "metadata": {
     "scrolled": true
@@ -2081,16 +1966,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 717 1634]\n",
-      " [ 681 1670]]\n",
+      "[[ 828 1523]\n",
+      " [ 526 1825]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    low_risk       0.51      0.30      0.38      2351\n",
-      "   high_risk       0.51      0.71      0.59      2351\n",
+      "    low_risk       0.61      0.35      0.45      2351\n",
+      "   high_risk       0.55      0.78      0.64      2351\n",
       "\n",
-      "    accuracy                           0.51      4702\n",
-      "   macro avg       0.51      0.51      0.49      4702\n",
-      "weighted avg       0.51      0.51      0.49      4702\n",
+      "    accuracy                           0.56      4702\n",
+      "   macro avg       0.58      0.56      0.54      4702\n",
+      "weighted avg       0.58      0.56      0.54      4702\n",
       "\n"
      ]
     }
