--- a/Generator/GenerateData.ipynb
+++ b/Generator/GenerateData.ipynb
@@ -1,19 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-2b1140de9946>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-2b1140de9946>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    wget https://resources.lendingclub.com/LoanStats_2019Q1.csv.zip\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "!wget resources.lendingclub.com/LoanStats_2019Q1.csv.zip\n",
     "!wget https://resources.lendingclub.com/LoanStats_2019Q2.csv.zip\n",
@@ -24,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +21,12 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from collections import Counter\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
